# Digital-Twin-Isaac-sim

./: .gitignore  .gitmodules  README.md  earth_latency.sh  launch_vr.sh  run.py  running_streaming.py  vr_container_receiver.py
None/: Turtlebot_graph.usd
assets/USD_Assets/jetauto_flat/: jetauto_flat.usd
assets/USD_Assets/robots/: ros2_jackal_PhysX_vlp16.usd  ros2_jackal_PhysX_vlp16_stereo.usd  turtlebot3_burger.usd  turtlebot3_burger1.usd  turtlebot3_burger_new.usd
assets/USD_Assets/robots/jetauto_flat/: jetauto_flat_broken.usd
assets/USD_Assets/robots/jetauto_flat/jetauto_flat/: jetauto_flat.usd
assets/USD_Assets/robots/jetauto_flat/jetauto_flat/jetauto_flat/: jetauto_flat.usd
assets/USD_Assets/robots/turtlebot3_burger/: turtlebot3_burger.usd
cfg/environment/: largescale.yaml  lunalab.yaml  lunaryard_20m.yaml  lunaryard_80m.yaml
jetauto/cliff_guard/: package.xml  setup.py
jetauto/cliff_guard/cliff_guard/: cliff_guard_node.py  handover_popup_node.py  vr_override_node.py
jetauto/cliff_guard/launch/: cliff_guard.launch.py
jetauto/forever_explore/: package.xml  setup.cfg  setup.py
jetauto/forever_explore/config/: explore_params.yaml
jetauto/forever_explore/forever_explore/: forever_explore_node.py
jetauto/forever_explore/launch/: forever_explore.launch.py
jetauto/jetauto_bringup/: CMakeLists.txt  nav2_params.yaml  package.xml
jetauto/jetauto_bringup/launch/: jetauto_state_publisher.launch.py  omnilrs_stack.launch.py
jetauto/jetauto_description/: CMakeLists.txt  package.xml
jetauto/jetauto_description/urdf/: jetauto_car.urdf.xacro  jetauto_flat.urdf
jetauto/jetauto_description/urdf/jetauto_flat/: jetauto_flat.usd
jetauto/stuck_guard/: package.xml  setup.cfg  setup.py
jetauto/stuck_guard/launch/: stuck_guard.launch.py
jetauto/stuck_guard/stuck_guard/: stuck_guard_node.py
omnilrs.docker/: .env  Dockerfile  docker-compose.yaml  docker-compose.yaml.cloudxr-backup  entrypoint.sh  run_docker.sh  run_docker.sh.backup
omnilrs.docker/scripts/: jetauto_controller.py  turtlebot_controller.py  turtulebot_move_script.py
outputs/2025-11-07/16-46-57/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-07/16-47-11/.hydra/: hydra.yaml
scripts/: USAGE.txt  start_omnilrs.sh  start_omnilrs_cloud.sh  stop_omnilrs.sh
src/configurations/: robot_confs.py
src/environments_wrappers/ros2/: __init__.py  simulation_manager_ros2.py
src/robots/: robot.py
src/stellar/: stellar_engine.py
src/terrain_management/: terrain_manager.py
