<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetauto_bringup</name>
  <version>1.0.0</version>
  <description>ROS 2 launch scripts for starting the JetAuto robot</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD 3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>jetauto_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
