<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetauto_description</name>
  <version>1.0.0</version>
  <description>3D models of the JetAuto robot for simulation and visualization</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD 3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
